# perlapi

./: readme.md
matrix/api/: .anjuta_sym_db.db  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  ltmain.sh
matrix/api/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
matrix/api/data/: fooapi.lo  hello.cpp  main.cpp  test
matrix/api/src/: Makefile.am  main.cc
matrix/api/webpack/: Makefile.am  cpi.cpp  cpi.h.gch  test
matrix/cpi/interface/: cpi  cpi.cc  cpi.lo  libcpi.la
matrix/cpi/interface/.libs/: libcpi.la  libcpi.lai  libcpi.so.0  libcpi.so.0.0.0
matrix/cpi/source/: cpi.h
matrix/prog/: connect  fooapi.cpp  hello.lo  jobsfixed  libhello.la  matrix  richer
matrix/prog/.libs/: libhello.lai  libhello.so.0.0.0
